<resources>
    <string name="app_name">MintMentor</string>
    <string name="app_title">Mint Mentor</string>
    <string name="clear_database">Clear Lesson Database</string>
    <string name="home_label">Home</string>
    <string name="learn_label">Learn</string>
    <string name="about_title">Welcome to Mint Mentor!</string>
    <string name="about_p1">This app provides the opportunity to learn about stocks and investing, in order to ensure a better financial future.</string>
    <string name="about_p2">There are several sections to learn about investing throughout the app, covering in detail all necessary information to begin or enhance your investing experience.</string>
    <string name="about_p3">The information in this app will take you through lessons on investing, risk management, building a successful portfolio, improving your financial literacy, and more</string>
    <string name="about_p4">At the end of each lesson, you will see a quiz on each lesson to help you comprehend the material best.</string>
    <string name="about_p5">We hope you enjoy!</string>
    <string name="about_p6">Grant Reddick and Ronak Ailawadi, creators</string>
    <string name="learn_title">Learn</string>
    <string name="complete">Take Quiz</string>
    <string name="return_to_lessons">Return to Lessons</string>
    <string name="next_question">Next Question</string>
    <string name="investment_basics_learn">Lesson 1: Investment Basics</string>
    <string name="financial_goals_learn">Lesson 2: Setting Financial Goals</string>
    <string name="investment_securities_learn">Lesson 3: Investment Securities</string>
    <string name="risk_return_learn">Lesson 4: Risk &amp; Return</string>
    <string name="portfolio_construction_learn">Lesson 5: Portfolio Construction</string>
    <string name="investment_strategies_learn">Lesson 6: Investment Strategies, Research, &amp; Analysis</string>
    <string name="tax_considerations_learn">Lesson 7: Tax Considerations</string>
    <string name="extra_info">Extra Info</string>
    <string name="investing_platforms_learn">Investing Platforms</string>
    <string name="resources_tools_learn">Resources &amp; Tools</string>
    <string name="financial_goals">Setting Financial Goals</string>
    <string name="financial_goals_p1">There are many steps to setting effective and reachable financial goals.</string>
    <string name="financial_goals_p2">First, begin by reflecting on your current financial situation, needs, and aspirations. Consider factors such as your income, expenses, debt, savings, and any significant life events (buying a house, funding education, retiring). This evaluation helps you understand your starting point and prioritize your goals.</string>
    <string name="financial_goals_p3">Then, identify your financial goals in specific terms. For instance, rather than a vague goal like "save for the future," set specific goals. Examples of these include “save $10,000 for an emergency fund within the next two years" or "accumulate $50,000 for a down payment on a house in five years." With those goals you just created, categorize your goals into short–term, medium–term, and long–term. Short–term goals might include building an emergency fund or paying off high–interest debt within the next year. Medium–term goals could involve saving for a vacation, a car, or a home down payment within 2–5 years. Long–term goals might include retirement savings, children\'s education, or financial independence over a longer period of time (5–10+ years).</string>
    <string name="financial_goals_p4">Next, rank your goals based on their importance and urgency. Prioritizing helps you allocate resources more effectively and focus on what matters most. Keep in mind that balancing various goals requires careful consideration of timelines and available funds. An important part is to ensure your goals are specific and measurable. Include details like the amount of money needed, the time frame in which you aim to achieve the goal, and any specific actions required. Measurable goals allow you to track your progress and stay motivated. And, while it\'s important to dream big, set goals that are achievable given your current financial circumstances. Unrealistic goals can lead to frustration and disappointment, so it’s important to consider factors like your income, expenses, and the potential for growth in your investments (which we’ll talk about in other sections)</string>
    <string name="financial_goals_p5">Then, assign a realistic time frame to each goal to create a sense of urgency and encourage consistent effort towards achieving the goal. Regularly track your progress toward your financial goals. If circumstances change, be flexible and adjust your goals accordingly. Life events, personal growth, and external factors can all influence your goals.</string>
    <string name="financial_goals_p6">We’ll start talking about how you can meet these financial goals by investing now, and talk about Investment Securities.</string>
    <string name="investment_securities">Investment Securities</string>
    <string name="investment_securities_p1">While “Securities” may mean something else to you, in the investing world it is a category. An example of this is a stock.
    Other investment vehicles include bonds, mutual funds and ETFs, real estate, and commodities.
        Let’s dive into each of them in detail here:</string>
    <string name="stocks">Stocks</string>
    <string name="investment_securities_p2">Investing in stocks means purchasing ownership shares in a company. As the company grows and succeeds, the value of its stock can increase, leading to potential capital gains. Additionally, some stocks pay dividends, providing regular income to investors.
        When you buy a company\'s stock, you become a partial owner of that company. Your ownership is proportional to the number of shares you hold compared to the total number of shares outstanding. As a shareholder, you have the potential to benefit from the company\'s success through capital appreciation and dividends.</string>
    <string name="investment_securities_p3">One of the primary ways to earn from stocks is through capital appreciation. If the company\'s value and profitability increase over time, the value of its stock and the stock price may rise as well. Investors can then sell their shares at a higher price than what they originally paid, resulting in a capital gain, or profit.
    Some companies also distribute a portion of their earnings to shareholders in the form of dividends. Dividends are periodic payments that can provide investors with a consistent income stream. Not all stocks pay dividends, and companies decide whether to pay dividends based on their financial health and growth plans.
    Investing in stocks is often most effective when approached with a long-term perspective. While short-term market fluctuations are normal, holding onto quality stocks over time can potentially lead to significant returns, especially when the power of compounding comes into play. We’ll talk about strategy in a bit as well.</string>
    <string name="bonds">Bonds:</string>
    <string name="investment_securities_p4">Bonds are debt securities issued by governments or corporations. When you buy a bond, you\'re essentially lending money to the issuer in exchange for interest.</string>
    <string name="mutual_and_etfs">Mutual Funds and ETFs:</string>
    <string name="investment_securities_p5">These investment vehicles pool money from multiple investors to invest in a diversified portfolio of assets. They provide instant diversification and are managed by professionals. We’ll also talk about ETFs soon.
    Investing in real estate involves purchasing properties with the aim of generating rental income and capital appreciation. Real estate can offer both income and potential growth over time, especially if you purchase a property and rent it out while it appreciates in value.
    You can also invest in commodities, or physical goods like gold, oil, and agricultural products. Investing in commodities can act as a hedge against inflation, as the prices of commodities often rise.
        Commodity, real estate, and bond trading is more complicated than stocks and ETFs. So, for now, we’ll be focusing on stocks and ETFs.</string>
    <string name="investment_securities_p6">
        Let’s back it up a bit. The stock market is open from 9:30 am EST to 4:00 pm EST Monday through Friday (there are some holidays where it is closed, listed <a href='https://www.nyse.com/markets/hours-calendars'>here</a>). Some trading platforms allow you to purchase shares of stock (remember, these are partial ownership units, and what you buy when you “buy a stock”) pre-market, from 6:00 am EST to 9:30 am EST, and after-hours, from 4:00 pm EST to 8:00 pm EST. However, it’s important to remember that unless there is some big news for a company, the stock price will remain relatively unchanged premarket and after-hours, and the bulk of the trading will take place during the day (9:30am to 4:00pm).</string>
    <string name="investment_securities_p7">In addition, a stock\’s closing price is its price at 4:00pm of the trading day, while its opening price is at 9:30am of the day.</string>
    <string name="investment_securities_p8">There are many numbers to look at when viewing a stock, and they\’re important to know. Let\’s take a look at one stock in particular, Roku Inc (pictured above). The stock\’s price, or share price, is $76.26. So, to purchase one (1) share of the company, it costs $76.26.</string>
    <string name="investment_securities_p9">It shows <font fgcolor='#FF0000'>-1.54 (-1.98%)</font>, meaning that the share price for the company has decreased $1.54 during that particular day compared to the previous day’s close price of $77.80. The “Day’s Range” shows the lowest and highest that the share price has been that day, while the “52 Week Range” shows the same thing for the past year.
    The volume is how many shares of stock have been traded on a given day. On this day, for example, 4,941,058 shares have been traded, but usually that is around 8,557,148 shares traded per day.
    Now, let’s look at the graph. Let’s say a man, Jonathan, bought ten (10) shares of ROKU in March 2023 at a price of $57.00 per share. In April 2023, the price was around $53.00 per share, so at that point, Jonathan was losing $4.00 per share, or a total of $40.00 due to his ten shares. If Jonathan decided to sell the shares at that price, he would definitively lose the $40.00.</string>
    <string name="investment_securities_p10">However, if he kept the shares until August 2023, the price would be at $80.00, and he would be making $23.00 per share, or a total of $230.00. Again, if Jonathan does not sell the shares, the loss or gain is not definitive. If he wants to claim his gain of $230.00, he must sell the shares, and then he does not have to worry about the future price of the share.
        Bid, Ask, and the rest of the concepts will be discussed later.</string>
    <string name="investing_platforms">Investing Platforms</string>
    <string name="robinhood">Robinhood</string>
    <string name="e_trade">E*TRADE</string>
    <string name="fidelity">Fidelity</string>
    <string name="td_ameritrade">TD Ameritrade\n(Charles Schwab)</string>
    <string name="m1_finance">M1 Finance</string>
    <string name="merrill_lynch">Merrill Lynch</string>
    <string name="check_answer">Check Answer</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="open">Open</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="close">Close</string>
    <string name="volume">Volume</string>
    <string name="stock_utilities">Stock Utilities</string>
    <string name="stock_lookup">Stock Lookup</string>
    <string name="profit_calculator">Profit Calculator</string>
</resources>