<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"

            android:text="@string/investment_securities"
            android:textAlignment="center"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p1"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"

            android:text="@string/stocks"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p2"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p3"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"

            android:text="@string/bonds"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p4"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"

            android:text="@string/mutual_and_etfs"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p5"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p6"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p7"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginHorizontal="40dp"
            app:srcCompat="@drawable/roku_stock_investment_securities" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p8"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p9"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"

            android:text="@string/investment_securities_p10"
            android:textSize="14sp"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/return_to_learn_fragment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.5"
                android:text="@string/return_to_lessons"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <Button
                android:id="@+id/take_quiz_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.5"
                android:text="@string/complete"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>