<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentTop="true">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="35sp"
        android:text="@string/stock_utilities"

        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/stock_lookup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/stock_lookup"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"/>

    <Button
        android:id="@+id/profit_calculator_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/profit_calculator"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"/>

</LinearLayout>